--- a/client/templates/home/clearance/student/student_clearance.html
+++ b/client/templates/home/clearance/student/student_clearance.html
@@ -238,9 +238,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Computer Society</h2>
-      <p>{{profile.COMSOCstatus}}</p>
-      {{#if _.isEqual profile.COMSOCstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.COMSOCofficer}}</p>{{/if}}
+      <p>{{profile.ComSocstatus}}</p>
+      {{#if _.isEqual profile.ComSocstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.ComSocofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -262,9 +262,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>English Language SC</h2>
-      <p>{{profile.ELSCstatus}}</p>
-      {{#if _.isEqual profile.ELSCstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.ELSCofficer}}</p>{{/if}}
+      <p>{{profile.EngLangstatus}}</p>
+      {{#if _.isEqual profile.EngLangstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.EngLangofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -285,9 +285,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Natural Science Society</h2>
-      <p>{{profile.NSSstatus}}</p>
-      {{#if _.isEqual profile.NSSstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.NSSofficer}}</p>{{/if}}
+      <p>{{profile.NatScistatus}}</p>
+      {{#if _.isEqual profile.NatScistatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.NatSciofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -309,9 +309,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Guidance Councilor</h2>
-      <p>{{profile.GUIDANCEstatus}}</p>
-      {{#if _.isEqual profile.GUIDANCEstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.GUIDANCEofficer}}</p>{{/if}}
+      <p>{{profile.COBGUIDANCEstatus}}</p>
+      {{#if _.isEqual profile.COBGUIDANCEstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.COBGUIDANCEofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -322,9 +322,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>CBAHPG SBO Adviser</h2>
-      <p>{{profile.CBAHPGSBOADVISERstatus}}</p>
-      {{#if _.isEqual profile.CBAHPGSBOADVISERstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.CBAHPGSBOADVISERofficer}}</p>{{/if}}
+      <p>{{profile.COBSBOADVISERstatus}}</p>
+      {{#if _.isEqual profile.COBSBOADVISERstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.COBSBOADVISERofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -332,9 +332,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>CBAHPG SBO</h2>
-      <p>{{profile.CBAHPGSBOstatus}}</p>
-      {{#if _.isEqual profile.CBAHPGSBOstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.CBAHPGSBOofficer}}</p>{{/if}}
+      <p>{{profile.COBSBOstatus}}</p>
+      {{#if _.isEqual profile.COBSBOstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.COBSBOofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -349,9 +349,9 @@
     <a class="item" href="#">
     <div class="logo-text-body wrap-text">
       <h2>Society President</h2>
-      <p>{{profile.SOCPRESstatus}}</p>
-      {{#if _.isEqual profile.SOCPRESstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.SOCPRESofficer}}</p>{{/if}}
+      <p>{{profile.SocPresstatus}}</p>
+      {{#if _.isEqual profile.SocPresstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.SocPresofficer}}</p>{{/if}}
     </div>
     </a>
    
@@ -377,18 +377,18 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Chairperson</h2>
-      <p>{{profile.CHAIRPERSONstatus}}</p>
-      {{#if _.isEqual profile.CHAIRPERSONstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.CHAIRPERSONofficer}}</p>{{/if}}
+      <p>{{profile.CCEITCHAIRPERSONstatus}}</p>
+      {{#if _.isEqual profile.CCEITCHAIRPERSONstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CCEITCHAIRPERSONofficer}}</p>{{/if}}
       </div>
     </a>
 
    <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Dean</h2>
-      <p>{{profile.DEANstatus}}</p>
-      {{#if _.isEqual profile.DEANstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.DEANofficer}}</p>{{/if}}
+      <p>{{profile.CCEITDEANstatus}}</p>
+      {{#if _.isEqual profile.CCEITDEANstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CCEITDEANofficer}}</p>{{/if}}
       </div>
     </a>
     
@@ -414,9 +414,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Computer Society</h2>
-      <p>{{profile.COMSOCstatus}}</p>
-      {{#if _.isEqual profile.COMSOCstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.COMSOCofficer}}</p>{{/if}}
+      <p>{{profile.ComSocstatus}}</p>
+      {{#if _.isEqual profile.ComSocstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.ComSocofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -427,9 +427,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>English Language SC</h2>
-      <p>{{profile.ELSCstatus}}</p>
-      {{#if _.isEqual profile.ELSCstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.ELSCofficer}}</p>{{/if}}
+      <p>{{profile.EngLangstatus}}</p>
+      {{#if _.isEqual profile.EngLangstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.EngLangofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -437,9 +437,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Natural Science Society</h2>
-      <p>{{profile.NSSstatus}}</p>
-      {{#if _.isEqual profile.NSSstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.NSSofficer}}</p>{{/if}}
+      <p>{{profile.NatScistatus}}</p>
+      {{#if _.isEqual profile.NatScistatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.NatSciofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -544,9 +544,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Chairperson</h2>
-      <p>{{profile.CHAIRPERSONstatus}}</p>
-      {{#if _.isEqual profile.CHAIRPERSONstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.CHAIRPERSONofficer}}</p>{{/if}}
+      <p>{{profile.CTECHAIRPERSONstatus}}</p>
+      {{#if _.isEqual profile.CTECHAIRPERSONstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CTECHAIRPERSONofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -554,9 +554,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Dean</h2>
-      <p>{{profile.DEANstatus}}</p>
-      {{#if _.isEqual profile.DEANstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.DEANofficer}}</p>{{/if}}
+      <p>{{profile.CTEDEANstatus}}</p>
+      {{#if _.isEqual profile.CTEDEANstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CTEDEANofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -569,9 +569,9 @@
     <a class="item" href="#">
     <div class="logo-text-body wrap-text">
       <h2>SBO Treasurer</h2>
-      <p>{{profile.SBOTREASstatus}}</p>
-      {{#if _.isEqual profile.SBOTREASstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.SBOTREASofficer}}</p>{{/if}}
+      <p>{{profile.CONSBOTREASstatus}}</p>
+      {{#if _.isEqual profile.CONSBOTREASstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CONSBOTREASofficer}}</p>{{/if}}
     </div>
     </a>
    
@@ -579,18 +579,18 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>SBO Governor</h2>
-      <p>{{profile.SBOGOVstatus}}</p>
-      {{#if _.isEqual profile.SBOGOVstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.SBOGOVofficer}}</p>{{/if}}
+      <p>{{profile.CONSBOGOVstatus}}</p>
+      {{#if _.isEqual profile.CONSBOGOVstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CONSBOGOVofficer}}</p>{{/if}}
       </div>
     </a>
     
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>SBO Adviser</h2>
-      <p>{{profile.SBOADVISERstatus}}</p>
-      {{#if _.isEqual profile.SBOADVISERstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.SBOADVISERofficer}}</p>{{/if}}
+      <p>{{profile.CONSBOADVISERstatus}}</p>
+      {{#if _.isEqual profile.CONSBOADVISERstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CONSBOADVISERofficer}}</p>{{/if}}
       </div>
     </a>
   
@@ -606,9 +606,9 @@
    <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Dean</h2>
-      <p>{{profile.DEANstatus}}</p>
-      {{#if _.isEqual profile.DEANstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.DEANofficer}}</p>{{/if}}
+      <p>{{profile.CONDEANstatus}}</p>
+      {{#if _.isEqual profile.CONDEANstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CONDEANofficer}}</p>{{/if}}
       </div>
     </a>
     
