--- a/client/templates/home/clearance/student/tabs/tabsOne.html
+++ b/client/templates/home/clearance/student/tabs/tabsOne.html
@@ -39,8 +39,8 @@
     <div class="logo-text-body">
       <h2>Computer Society</h2>
       <p>{{profile.ComSocstatus}}</p>
-      {{#if _.isEqual profile.COMSOCstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.COMSOCofficer}}</p>{{/if}}
+      {{#if _.isEqual profile.ComSocstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.ComSocofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -145,9 +145,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>CAS Dean</h2>
-      <p>{{profile.DEANstatus}}</p>
-      {{#if _.isEqual profile.DEANstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.DEANofficer}}</p>{{/if}}
+      <p>{{profile.CASDEANstatus}}</p>
+      {{#if _.isEqual profile.CASDEANstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CASDEANofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -198,9 +198,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Computer Society</h2>
-      <p>{{profile.COMSOCstatus}}</p>
-      {{#if _.isEqual profile.COMSOCstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.COMSOCofficer}}</p>{{/if}}
+      <p>{{profile.ComSocstatus}}</p>
+      {{#if _.isEqual profile.ComSocstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.ComSocofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -222,9 +222,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>English Language SC</h2>
-      <p>{{profile.ELSCstatus}}</p>
-      {{#if _.isEqual profile.ELSCstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.ELSCofficer}}</p>{{/if}}
+      <p>{{profile.EngLangstatus}}</p>
+      {{#if _.isEqual profile.EngLangstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.EngLanfofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -245,9 +245,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Natural Science Society</h2>
-      <p>{{profile.NSSstatus}}</p>
-      {{#if _.isEqual profile.NSSstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.NSSofficer}}</p>{{/if}}
+      <p>{{profile.NatScistatus}}</p>
+      {{#if _.isEqual profile.NatScistatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.NatSciofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -269,9 +269,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Guidance Councilor</h2>
-      <p>{{profile.GUIDANCEstatus}}</p>
-      {{#if _.isEqual profile.GUIDANCEstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.GUIDANCEofficer}}</p>{{/if}}
+      <p>{{profile.COBGUIDANCEstatus}}</p>
+      {{#if _.isEqual profile.COBGUIDANCEstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.COBGUIDANCEofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -282,9 +282,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>CBAHPG SBO Adviser</h2>
-      <p>{{profile.CBAHPGSBOADVISERstatus}}</p>
-      {{#if _.isEqual profile.CBAHPGSBOADVISERstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.CBAHPGSBOADVISERofficer}}</p>{{/if}}
+      <p>{{profile.COBSBOADVISERstatus}}</p>
+      {{#if _.isEqual profile.COBSBOADVISERstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.COBSBOADVISERofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -292,9 +292,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>CBAHPG SBO</h2>
-      <p>{{profile.CBAHPGSBOstatus}}</p>
-      {{#if _.isEqual profile.CBAHPGSBOstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.CBAHPGSBOofficer}}</p>{{/if}}
+      <p>{{profile.COBSBOstatus}}</p>
+      {{#if _.isEqual profile.COBSBOstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.COBSBOofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -309,9 +309,9 @@
     <a class="item" href="#">
     <div class="logo-text-body wrap-text">
       <h2>Society President</h2>
-      <p>{{profile.SOCPRESstatus}}</p>
-      {{#if _.isEqual profile.SOCPRESstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.SOCPRESofficer}}</p>{{/if}}
+      <p>{{profile.SocPresstatus}}</p>
+      {{#if _.isEqual profile.SocPresstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.SocPresofficer}}</p>{{/if}}
     </div>
     </a>
    
@@ -337,18 +337,18 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Chairperson</h2>
-      <p>{{profile.CHAIRPERSONstatus}}</p>
-      {{#if _.isEqual profile.CHAIRPERSONstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.CHAIRPERSONofficer}}</p>{{/if}}
+      <p>{{profile.CCEITCHAIRPERSONstatus}}</p>
+      {{#if _.isEqual profile.CCEITCHAIRPERSONstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CCEITCHAIRPERSONofficer}}</p>{{/if}}
       </div>
     </a>
 
    <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Dean</h2>
-      <p>{{profile.DEANstatus}}</p>
-      {{#if _.isEqual profile.DEANstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.DEANofficer}}</p>{{/if}}
+      <p>{{profile.CCEITDEANstatus}}</p>
+      {{#if _.isEqual profile.CCEITDEANstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CCEITDEANofficer}}</p>{{/if}}
       </div>
     </a>
     
@@ -374,9 +374,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Computer Society</h2>
-      <p>{{profile.COMSOCstatus}}</p>
-      {{#if _.isEqual profile.COMSOCstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.COMSOCofficer}}</p>{{/if}}
+      <p>{{profile.ComSocstatus}}</p>
+      {{#if _.isEqual profile.ComSocstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.ComSocofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -387,9 +387,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>English Language SC</h2>
-      <p>{{profile.ELSCstatus}}</p>
-      {{#if _.isEqual profile.ELSCstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.ELSCofficer}}</p>{{/if}}
+      <p>{{profile.EngLangstatus}}</p>
+      {{#if _.isEqual profile.EngLangstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.EngLangofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -397,9 +397,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Natural Science Society</h2>
-      <p>{{profile.NSSstatus}}</p>
-      {{#if _.isEqual profile.NSSstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.NSSofficer}}</p>{{/if}}
+      <p>{{profile.NatScistatus}}</p>
+      {{#if _.isEqual profile.NatScistatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.NatSciofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -504,9 +504,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Chairperson</h2>
-      <p>{{profile.CHAIRPERSONstatus}}</p>
-      {{#if _.isEqual profile.CHAIRPERSONstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.CHAIRPERSONofficer}}</p>{{/if}}
+      <p>{{profile.CTECHAIRPERSONstatus}}</p>
+      {{#if _.isEqual profile.CTECHAIRPERSONstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CTECHAIRPERSONofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -514,9 +514,9 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Dean</h2>
-      <p>{{profile.DEANstatus}}</p>
-      {{#if _.isEqual profile.DEANstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.DEANofficer}}</p>{{/if}}
+      <p>{{profile.CTEDEANstatus}}</p>
+      {{#if _.isEqual profile.CTEDEANstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CTEDEANofficer}}</p>{{/if}}
       </div>
     </a>
     </div>
@@ -529,9 +529,9 @@
     <a class="item" href="#">
     <div class="logo-text-body wrap-text">
       <h2>SBO Treasurer</h2>
-      <p>{{profile.SBOTREASstatus}}</p>
-      {{#if _.isEqual profile.SBOTREASstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.SBOTREASofficer}}</p>{{/if}}
+      <p>{{profile.CONSBOTREASstatus}}</p>
+      {{#if _.isEqual profile.CONSBOTREASstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CONSBOTREASofficer}}</p>{{/if}}
     </div>
     </a>
    
@@ -539,18 +539,18 @@
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>SBO Governor</h2>
-      <p>{{profile.SBOGOVstatus}}</p>
-      {{#if _.isEqual profile.SBOGOVstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.SBOGOVofficer}}</p>{{/if}}
+      <p>{{profile.CONSBOGOVstatus}}</p>
+      {{#if _.isEqual profile.CONSBOGOVstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CONSBOGOVofficer}}</p>{{/if}}
       </div>
     </a>
     
     <a class="item" href="#">
     <div class="logo-text-body">
       <h2>SBO Adviser</h2>
-      <p>{{profile.SBOADVISERstatus}}</p>
-      {{#if _.isEqual profile.SBOADVISERstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.SBOADVISERofficer}}</p>{{/if}}
+      <p>{{profile.CONSBOADVISERstatus}}</p>
+      {{#if _.isEqual profile.CONSBOADVISERstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CONSBOADVISERofficer}}</p>{{/if}}
       </div>
     </a>
   
@@ -566,9 +566,9 @@
    <a class="item" href="#">
     <div class="logo-text-body">
       <h2>Dean</h2>
-      <p>{{profile.DEANstatus}}</p>
-      {{#if _.isEqual profile.DEANstatus 'checked'}}<p>{{createdAt}}</p>
-      <p>{{profile.DEANofficer}}</p>{{/if}}
+      <p>{{profile.CONDEANstatus}}</p>
+      {{#if _.isEqual profile.CONDEANstatus 'checked'}}<p>{{createdAt}}</p>
+      <p>{{profile.CONDEANofficer}}</p>{{/if}}
       </div>
     </a>
     
