--- a/client/templates/home/map/map.html
+++ b/client/templates/home/map/map.html
@@ -20,7 +20,7 @@
 
 
 
-{{#each tabs}}
+<!-- {{#each tabs}}
 
     <div class="card">
       <div class="item item-image">
@@ -28,7 +28,12 @@
       </div>
     </div>
       
-{{/each}}
+{{/each}} -->
+
+
+  <div class="map-container">
+    {{> googleMap name="map" options=mapOptions}}
+  </div>
 
 
 
