--- a/client/stylesheet/app.scss
+++ b/client/stylesheet/app.scss
@@ -67,6 +67,13 @@ $loading-font-size: 22px;
 .logo-text-body { text-align: center;}
 
 
+.map-container {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+}
+
+
 
 
 
