--- a/client/templates/home/clearance/student/student_profile_info.html
+++ b/client/templates/home/clearance/student/student_profile_info.html
@@ -103,8 +103,9 @@
     <p>COLLEGE</p>
   </div>
   <div class="col">
-    <h2>{{profile.course}}</h2>   
-    <p>COURSE</p>
+    <h2>{{profile.course}} {{#if _.isEqual profile.year '1st Year'}}1{{/if}}{{#if _.isEqual profile.year '2nd Year'}}2{{/if}}{{#if _.isEqual profile.year '3rd Year'}}3{{/if}}{{#if _.isEqual profile.year '4th Year'}}4{{/if}}{{#if _.isEqual profile.year '5th Year'}}5{{/if}}</h2>   
+
+    <p>COURSE & YEAR</p>
   </div>
 </div>
 
